Implement Working Canvas with Palette
- Add Canvas Fragment which communicates with palette fragment using ViewModel
- Add listener to double click and long hold click to clean screen and change background

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
     <fragment
         android:id="@+id/canvasFragment"
-        android:name="com.example.paint.CanvasFragment"
+        android:name="com.example.paint.Canvas"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
