--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -9,7 +9,7 @@
 
     <fragment
         android:id="@+id/canvasFragment"
-        android:name="com.example.paint.CanvasFragment"
+        android:name="com.example.paint.Canvas"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
@@ -26,7 +26,7 @@
     <fragment
         android:id="@+id/paletteFragment"
         android:name="com.example.paint.Palette"
-        android:layout_width="80dp"
+        android:layout_width="250dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
