Implement Sensor Features & Maps
- Add drawing deletion upon shaking
- Add canvas brightening in dark environments
- Add background color change when phone is laying on a table
- Add maps option on menu
- Implement the ability to enter draw mode on maps, where path is marked on map

--- a/app/src/main/res/menu/extra_options_menu.xml
+++ b/app/src/main/res/menu/extra_options_menu.xml
@@ -4,4 +4,7 @@
         android:title="@string/settings_button"/>
     <item android:id="@+id/about_option"
         android:title="@string/about_button"/>
+
+    <item android:id="@+id/maps_option"
+        android:title="@string/maps_option"/>
 </menu>
